Modificada restriccion de patentes base de datos y agregado logoMendoza

--- a/mendoza/index.html
+++ b/mendoza/index.html
@@ -67,6 +67,7 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body text-center">
+                                <img src="logoMendoza.png" alt="Logo Mendoza" class="mb-3" style="height: 60px;">
                                 <h2 class="card-title">{{ estado.taller }}</h2>
                                 <p class="card-text text-muted">
                                     Capacidad: {{ estado.capacidad }} turnos simultáneos
