--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <i class="bi bi-wrench"></i>
                         Sistema de Turnos
                     </h1>
-                    <p class="lead text-muted">Gestión de turnos Taller Mendoza</p>
+                    <p class="lead text-muted">Gestión de turnos Taller</p>
                 </div>
 
                 <div class="row g-4">
