--- a/mendoza/admin.html
+++ b/mendoza/admin.html
@@ -23,8 +23,8 @@
                     <i class="bi bi-shield-lock"></i>
                     Panel Administrativo
                 </span>
-                <div v-if="isLoggedIn">
-                    <span class="text-white me-3">{{ user.usuario }} - {{ user.tallerNombre }}</span>
+                <div v-if="isLoggedIn && user">
+                    <span class="text-white me-3">{{ user.usuario }} - {{ user.tallerNombre || 'Sin taller' }}</span>
                     <button @click="logout" class="btn btn-outline-light btn-sm">
                         <i class="bi bi-box-arrow-right"></i>
                         Salir
@@ -80,7 +80,41 @@
             </div>
 
             <!-- Admin Panel -->
-            <div v-if="isLoggedIn">
+            <div v-if="isLoggedIn && user">
+                <!-- Selector de taller para super usuarios -->
+                <div v-if="user.rol === 'super' && !user.tallerId" class="card mb-4">
+                    <div class="card-header bg-primary text-white">
+                        <h5 class="mb-0">Seleccionar Taller</h5>
+                    </div>
+                    <div class="card-body">
+                        <div v-if="loadingTalleres" class="text-center py-3">
+                            <div class="loading-spinner"></div>
+                            <p class="mt-2 text-muted">Cargando talleres...</p>
+                        </div>
+                        <div v-else-if="talleres.length === 0" class="alert alert-info">
+                            <i class="bi bi-info-circle"></i>
+                            No hay talleres disponibles. Contacta al administrador.
+                        </div>
+                        <div v-else class="list-group">
+                            <button 
+                                v-for="taller in talleres" 
+                                :key="taller.id"
+                                @click="seleccionarTaller(taller.id)"
+                                class="list-group-item list-group-item-action"
+                                :disabled="loading"
+                            >
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <strong>{{ taller.nombre }}</strong>
+                                        <small class="text-muted d-block">ID: {{ taller.id }}</small>
+                                    </div>
+                                    <span class="badge bg-primary">Seleccionar</span>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Error Alert -->
                 <div v-if="error" class="alert alert-danger alert-dismissible" role="alert">
                     <i class="bi bi-exclamation-triangle"></i>
@@ -339,6 +373,7 @@
                 </div>
 
                 <!-- === CONFIGURACIÓN LOGO === -->
+                
                 
                 <div v-if="activeTab === 'logo'" class="row mb-3">
                     <div class="col-12">
@@ -623,7 +658,7 @@
                                             id="emailOrigen"
                                             v-model="emailConfig.emailOrigen"
                                             :disabled="loadingEmail"
-                                            placeholder="remitente@email.com"
+                                            placeholder="remitente@dominio.com"
                                         >
                                     </div>
                                 </div>
