--- a/setup.html
+++ b/setup.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configuración Inicial - Sistema de Talleres</title>
+    <title>Configuración del Sistema - Super Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="mendoza/css/styles.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -13,13 +14,13 @@
             <div class="col-md-8">
                 <div class="card shadow">
                     <div class="card-header bg-primary text-white">
-                        <h4 class="mb-0">Configuración Inicial del Sistema</h4>
+                        <h4 class="mb-0">Administración del Sistema</h4>
                     </div>
                     <div class="card-body">
                         <!-- Login Section -->
                         <div id="login-section" v-if="!isLoggedIn">
-                            <h5>Iniciar Sesión</h5>
-                            <form @submit.prevent="login" class="mb-4">
+                            <h5>Iniciar Sesión (Solo para acaldeo)</h5>
+                            <form @submit.prevent="handleLogin" class="mb-4">
                                 <div class="mb-3">
                                     <label class="form-label">Usuario</label>
                                     <input v-model="loginForm.usuario" type="text" class="form-control" required>
@@ -36,44 +37,93 @@
                             <div v-if="error" class="alert alert-danger">{{ error }}</div>
                         </div>
 
-                        <!-- Setup Section -->
-                        <div id="setup-section" v-if="isLoggedIn">
-                            <h5>Crear Taller</h5>
-                            <form @submit.prevent="crearTaller" class="mb-4">
-                                <div class="mb-3">
-                                    <label class="form-label">Nombre del Taller</label>
-                                    <input v-model="tallerForm.nombre" type="text" class="form-control" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label">Capacidad</label>
-                                    <input v-model="tallerForm.capacidad" type="number" class="form-control" min="1" required>
-                                </div>
-                                <button type="submit" class="btn btn-success" :disabled="loading">
-                                    <span v-if="loading" class="spinner-border spinner-border-sm me-2"></span>
-                                    Crear Taller
-                                </button>
-                            </form>
+                        <!-- Dashboard Section -->
+                        <div id="dashboard-section" v-if="isLoggedIn">
+                            <div class="alert alert-info">
+                                <h5>Bienvenido, {{ user?.usuario }}</h5>
+                                <p>Como super usuario, puedes crear y eliminar talleres del sistema.</p>
+                            </div>
 
-                            <div v-if="tallerCreado">
-                                <div class="alert alert-success">
-                                    Taller creado: {{ tallerCreado.nombre }} (ID: {{ tallerCreado.id }})
+                            <!-- Crear Nuevo Taller -->
+                            <div class="card mb-4">
+                                <div class="card-header">
+                                    <h5 class="mb-0">Crear Nuevo Taller</h5>
                                 </div>
+                                <div class="card-body">
+                                    <form @submit.prevent="crearTaller" class="mb-3">
+                                        <div class="mb-3">
+                                            <label class="form-label">Nombre del Taller</label>
+                                            <input v-model="tallerForm.nombre" type="text" class="form-control" required>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Capacidad</label>
+                                            <input v-model="tallerForm.capacidad" type="number" class="form-control" min="1" required>
+                                        </div>
+                                        <hr>
+                                        <h6 class="mb-3">Usuario Administrador del Taller</h6>
+                                        <div class="row">
+                                            <div class="col-md-6 mb-3">
+                                                <label class="form-label">Usuario</label>
+                                                <input v-model="tallerForm.usuario" type="text" class="form-control" required>
+                                            </div>
+                                            <div class="col-md-6 mb-3">
+                                                <label class="form-label">Contraseña</label>
+                                                <input v-model="tallerForm.password" type="password" class="form-control" required>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-success" :disabled="loading">
+                                            <span v-if="loading" class="spinner-border spinner-border-sm me-2"></span>
+                                            Crear Taller y Usuario
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
 
-                                <h5>Crear Usuario Administrador</h5>
-                                <form @submit.prevent="crearUsuario">
+                            <!-- Eliminar Taller -->
+                            <div class="card border-danger mb-4">
+                                <div class="card-header bg-danger text-white">
+                                    <h5 class="mb-0">Eliminar Taller</h5>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Esta acción eliminará permanentemente el taller y todos sus datos (turnos, usuarios, configuración).</p>
                                     <div class="mb-3">
-                                        <label class="form-label">Usuario</label>
-                                        <input v-model="usuarioForm.usuario" type="text" class="form-control" required>
+                                        <label class="form-label">ID del Taller a Eliminar</label>
+                                        <input v-model="eliminarTallerId" type="number" class="form-control" placeholder="Ingrese el ID del taller">
                                     </div>
-                                    <div class="mb-3">
-                                        <label class="form-label">Contraseña</label>
-                                        <input v-model="usuarioForm.password" type="password" class="form-control" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-success" :disabled="loading">
+                                    <button @click="eliminarTaller" class="btn btn-danger" :disabled="loading || !eliminarTallerId">
                                         <span v-if="loading" class="spinner-border spinner-border-sm me-2"></span>
-                                        Crear Usuario
+                                        <i class="bi bi-trash"></i>
+                                        Eliminar Taller
                                     </button>
-                                </form>
+                                </div>
+                            </div>
+
+                            <!-- Cambiar Contraseña de acaldeo -->
+                            <div class="card border-warning">
+                                <div class="card-header bg-warning text-dark">
+                                    <h5 class="mb-0">Cambiar Contraseña</h5>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Cambia la contraseña del usuario acaldeo.</p>
+                                    <form @submit.prevent="cambiarPassword" class="mb-3">
+                                        <div class="mb-3">
+                                            <label class="form-label">Nueva Contraseña</label>
+                                            <input v-model="passwordForm.password" type="password" class="form-control" required minlength="6" placeholder="Mínimo 6 caracteres">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Confirmar Contraseña</label>
+                                            <input v-model="passwordForm.confirmar" type="password" class="form-control" required placeholder="Repita la contraseña">
+                                        </div>
+                                        <button type="submit" class="btn btn-warning" :disabled="loading || passwordForm.password !== passwordForm.confirmar">
+                                            <span v-if="loading" class="spinner-border spinner-border-sm me-2"></span>
+                                            <i class="bi bi-key"></i>
+                                            Cambiar Contraseña
+                                        </button>
+                                        <div v-if="passwordForm.password && passwordForm.confirmar && passwordForm.password !== passwordForm.confirmar" class="text-danger mt-2">
+                                            Las contraseñas no coinciden
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
 
                             <div v-if="successMessage" class="alert alert-success mt-3">{{ successMessage }}</div>
@@ -96,19 +146,21 @@
                 const loading = ref(false);
                 const error = ref('');
                 const successMessage = ref('');
-                const tallerCreado = ref(null);
+                const eliminarTallerId = ref('');
 
                 const loginForm = reactive({
                     usuario: '',
                     password: ''
                 });
 
-                const tallerForm = reactive({
-                    nombre: '',
-                    capacidad: 3
+                const passwordForm = reactive({
+                    password: '',
+                    confirmar: ''
                 });
 
-                const usuarioForm = reactive({
+                const tallerForm = reactive({
+                    nombre: '',
+                    capacidad: 3,
                     usuario: '',
                     password: ''
                 });
@@ -117,12 +169,12 @@
 
                 const isLoggedIn = computed(() => user.value !== null);
 
-                const login = async () => {
+                const handleLogin = async () => {
                     try {
                         loading.value = true;
                         error.value = '';
                         const userData = await api.login(loginForm);
-                        user.value = userData;
+                        user.value = Object.assign({}, userData);
                         successMessage.value = 'Sesión iniciada correctamente';
                     } catch (err) {
                         error.value = err.message;
@@ -135,9 +187,12 @@
                     try {
                         loading.value = true;
                         error.value = '';
-                        const data = await api.crearTaller(tallerForm);
-                        tallerCreado.value = data;
-                        successMessage.value = 'Taller creado correctamente';
+                        await api.crearTaller(tallerForm);
+                        successMessage.value = 'Taller y usuario administrador creados correctamente';
+                        tallerForm.nombre = '';
+                        tallerForm.capacidad = 3;
+                        tallerForm.usuario = '';
+                        tallerForm.password = '';
                     } catch (err) {
                         error.value = err.message;
                     } finally {
@@ -145,14 +200,39 @@
                     }
                 };
 
-                const crearUsuario = async () => {
+                const eliminarTaller = async () => {
+                    if (!eliminarTallerId.value) {
+                        error.value = 'Debe ingresar el ID del taller a eliminar';
+                        return;
+                    }
+                    if (!confirm('¿Estás seguro de eliminar el taller con ID ' + eliminarTallerId.value + ' y todos sus datos? Esta acción no se puede deshacer.')) {
+                        return;
+                    }
                     try {
                         loading.value = true;
                         error.value = '';
-                        await api.crearUsuario(tallerCreado.value.id, usuarioForm);
-                        successMessage.value = 'Usuario creado correctamente';
-                        // Reset forms
-                        Object.assign(usuarioForm, { usuario: '', password: '' });
+                        await api.eliminarTallerPorId(eliminarTallerId.value);
+                        successMessage.value = 'Taller eliminado correctamente.';
+                        eliminarTallerId.value = '';
+                    } catch (err) {
+                        error.value = err.message;
+                    } finally {
+                        loading.value = false;
+                    }
+                };
+
+                const cambiarPassword = async () => {
+                    if (passwordForm.password !== passwordForm.confirmar) {
+                        error.value = 'Las contraseñas no coinciden';
+                        return;
+                    }
+                    try {
+                        loading.value = true;
+                        error.value = '';
+                        await api.cambiarPasswordPropia({ password: passwordForm.password });
+                        successMessage.value = 'Contraseña actualizada correctamente.';
+                        passwordForm.password = '';
+                        passwordForm.confirmar = '';
                     } catch (err) {
                         error.value = err.message;
                     } finally {
@@ -165,14 +245,15 @@
                     loading,
                     error,
                     successMessage,
-                    tallerCreado,
                     loginForm,
                     tallerForm,
-                    usuarioForm,
+                    passwordForm,
                     isLoggedIn,
-                    login,
+                    eliminarTallerId,
+                    handleLogin,
                     crearTaller,
-                    crearUsuario
+                    eliminarTaller,
+                    cambiarPassword
                 };
             }
         }).mount('#app');
