Agregado campo ciudad para los talleres

--- a/mendoza/index.html
+++ b/mendoza/index.html
@@ -62,7 +62,7 @@
                                             style="height: 20px; object-fit: contain;"
                                         >
                                     </span>
-                                    {{ taller.nombre }}
+                                    {{ taller.nombre }} - {{ taller.ciudad }}
                                 </button>
                             </div>
                         </div>
