Modificaciones en la base de datos, agregada tablas pronvincia y localidad, agregada direccion a logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <p class="card-text text-muted">
                                     Consulta el estado actual de los turnos en tiempo real
                                 </p>
-                                <a href="mendoza/index.html" class="btn btn-primary btn-lg">
+                                <a href="tallerFront/index.html" class="btn btn-primary btn-lg">
                                     <i class="bi bi-arrow-right"></i>
                                     Ver Estado
                                 </a>
@@ -54,7 +54,7 @@
                                 <p class="card-text text-muted">
                                     Panel administrativo
                                 </p>
-                                <a href="mendoza/admin.html" class="btn btn-success btn-lg">
+                                <a href="tallerFront/admin.html" class="btn btn-success btn-lg">
                                     <i class="bi bi-gear"></i>
                                     Administrar
                                 </a>
