--- a/setup.html
+++ b/setup.html
@@ -6,7 +6,7 @@
     <title>Configuración del Sistema - Super Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="mendoza/css/styles.css" rel="stylesheet">
+    <link href="tallerFront/css/styles.css" rel="stylesheet">
 </head>
 <body class="bg-light">
     <div id="app" class="container mt-5">
@@ -55,9 +55,26 @@
                                             <label class="form-label">Nombre del Taller</label>
                                             <input v-model="tallerForm.nombre" type="text" class="form-control" required>
                                         </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">Ciudad</label>
-                                            <input v-model="tallerForm.ciudad" type="text" class="form-control" required placeholder="Ej: Mendoza">
+                                        <div class="row">
+                                            <div class="col-md-6 mb-3">
+                                                <label class="form-label">Provincia</label>
+                                                <select v-model="tallerForm.provinciaId" class="form-control" required>
+                                                    <option value="">Seleccione una provincia</option>
+                                                    <option v-for="prov in provincias" :key="prov.id" :value="prov.id">
+                                                        {{ prov.nombre }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6 mb-3">
+                                                <label class="form-label">Localidad</label>
+                                                <select v-model="tallerForm.localidadId" class="form-control" required :disabled="!tallerForm.provinciaId">
+                                                    <option value="">Seleccione una localidad</option>
+                                                    <option v-for="loc in localidades" :key="loc.id" :value="loc.id">
+                                                        {{ loc.nombre }}
+                                                    </option>
+                                                </select>
+                                                <small v-if="!tallerForm.provinciaId" class="text-muted">Primero seleccione una provincia</small>
+                                            </div>
                                         </div>
                                         <div class="mb-3">
                                             <label class="form-label">Capacidad</label>
@@ -140,7 +157,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.js"></script>
-    <script src="mendoza/js/api.js"></script>
+    <script src="tallerFront/js/api.js"></script>
     <script>
         const { createApp, ref, reactive, computed } = Vue;
 
@@ -151,6 +168,8 @@
                 const error = ref('');
                 const successMessage = ref('');
                 const eliminarTallerId = ref('');
+                const provincias = ref([]);
+                const localidades = ref([]);
 
                 const loginForm = reactive({
                     usuario: '',
@@ -164,7 +183,8 @@
 
                 const tallerForm = reactive({
                     nombre: '',
-                    ciudad: '',
+                    provinciaId: '',
+                    localidadId: '',
                     capacidad: 3,
                     usuario: '',
                     password: ''
@@ -173,6 +193,39 @@
                 const api = new ApiService();
 
                 const isLoggedIn = computed(() => user.value !== null);
+
+                const cargarProvincias = async () => {
+                    try {
+                        const response = await fetch('/taller/tallerApi/api/v1/provincias');
+                        const data = await response.json();
+                        if (data.success) {
+                            provincias.value = data.data;
+                        }
+                    } catch (err) {
+                        console.error('Error cargando provincias:', err);
+                    }
+                };
+
+                const cargarLocalidades = async () => {
+                    if (!tallerForm.provinciaId) {
+                        localidades.value = [];
+                        return;
+                    }
+                    try {
+                        const response = await fetch(`/taller/tallerApi/api/v1/provincias/${tallerForm.provinciaId}/localidades`);
+                        const data = await response.json();
+                        if (data.success) {
+                            localidades.value = data.data;
+                        }
+                    } catch (err) {
+                        console.error('Error cargando localidades:', err);
+                    }
+                };
+
+                Vue.watch(() => tallerForm.provinciaId, () => {
+                    tallerForm.localidadId = '';
+                    cargarLocalidades();
+                });
 
                 const handleLogin = async () => {
                     try {
@@ -195,7 +248,8 @@
                         await api.crearTaller(tallerForm);
                         successMessage.value = 'Taller y usuario administrador creados correctamente';
                         tallerForm.nombre = '';
-                        tallerForm.ciudad = '';
+                        tallerForm.provinciaId = '';
+                        tallerForm.localidadId = '';
                         tallerForm.capacidad = 3;
                         tallerForm.usuario = '';
                         tallerForm.password = '';
@@ -246,6 +300,9 @@
                     }
                 };
 
+                // Cargar provincias al montar
+                cargarProvincias();
+
                 return {
                     user,
                     loading,
@@ -256,6 +313,8 @@
                     passwordForm,
                     isLoggedIn,
                     eliminarTallerId,
+                    provincias,
+                    localidades,
                     handleLogin,
                     crearTaller,
                     eliminarTaller,
