--- a/tallerFront/index.html
+++ b/tallerFront/index.html
@@ -6,13 +6,13 @@
     <title>Estado del Taller - Turnos</title>
     
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Estilos personalizados -->
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Vue.js 3 CDN -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js" crossorigin="anonymous"></script>
+    <script src="//unpkg.com/vue@3/dist/vue.global.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-light">
     <div id="app">
@@ -62,7 +62,7 @@
                                             style="height: 20px; object-fit: contain;"
                                         >
                                     </span>
-                                    {{ taller.nombre }} - {{ taller.ciudad }}
+                                    {{ taller.nombre }} - {{ taller.localidad }}, {{ taller.provincia }}
                                 </button>
                             </div>
                         </div>
@@ -390,10 +390,10 @@
     </div>
 
     <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" crossorigin="anonymous">
 
     <!-- API Service -->
     <script src="js/api.js"></script>
