--- a/tallerFront/admin.html
+++ b/tallerFront/admin.html
@@ -797,9 +797,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" crossorigin="anonymous">
     
     <!-- API Service -->
-    <script src="js/api.js"></script>
+    <script src="js/api.js?v=2"></script>
     
     <!-- Vue App -->
-    <script src="js/admin.js"></script>
+    <script src="js/admin.js?v=2"></script>
 </body>
 </html>
